--- a/index.html
+++ b/index.html
@@ -173,11 +173,18 @@
         <h2>Stats in XR</h2>
         <p>Viewing 3D Tiles stats in a WebXR</p>
       </a>
+
+      <a class='link' href='examples/raysmith'>
+        <h2>Ray Smith Interior</h2>
+        <p>An interior scan in RealityCapture</p>
+      </a>
+
     </div>
     <div class='image-wrapper'>
       <img src='examples/basic.jpg'/>
       <img src='examples/webxr.jpg' class='hidden' />
       <img src='examples/stats.jpg' class='hidden' />
+      <img src='examples/raysmith.jpg' class='hidden' />
     </div>
   </main>
 
