--- a/examples/raysmith/index.html
+++ b/examples/raysmith/index.html
@@ -21,6 +21,7 @@
         id="tileset"
         position="0 -0.237 0"
         rotation="-90 0 0"
+        scale="1.5 1.5 1.5"
         loader-3dtiles="url: https://storage.googleapis.com/rd-big-files/tilesets_003/RAYSMITHSTUDIO/INTERIOR/1205_RAYSMITHSTUDIO_INT_10M_105x8K__10K-PN_50P_DB/tileset_tileset.json; maximumSSE: 48; cameraEl: #camera"
       >
       </a-entity>
