--- a/index.html
+++ b/index.html
@@ -160,23 +160,23 @@
     <div class='links'>
 
       <a class='link active' href='examples/basic'>
-        <h2>Basic example</h2>
-        <p>Viewing a photogrammetry model tiled in RealityCapture within an A-Frame scene</p>
+        <h2>Basic Example</h2>
+        <p>A photogrammetry model of an alley loaded with an A-Frame scene for a standard web-browser</p>
       </a>
 
       <a class='link' href='examples/webxr'>
-        <h2>WebXR</h2>
-        <p>Viewing a model in an WebXR environment with teleport controls</p>
+        <h2>WebXR Example</h2>
+        <p>A photogrammetry model of an alley loaded with an A-Frame scene in an WebXR environment with teleport controls</p>
       </a>
 
       <a class='link' href='examples/stats'>
-        <h2>Stats in XR</h2>
-        <p>Viewing 3D Tiles stats in a WebXR</p>
+        <h2>WebXR with Statistics</h2>
+        <p>A photogrammetry model loaded with an A-Frame scene with 3D tiles statistics in an WebXR</p>
       </a>
 
       <a class='link' href='examples/raysmith'>
-        <h2>Ray Smith Interior</h2>
-        <p>An interior scan in RealityCapture</p>
+        <h2>Artist Studio Interior</h2>
+        <p>A photogrammetry model of Ray Smith’s artist studio loaded with an A-Frame scene in an WebXR environment</p>
       </a>
 
     </div>
