--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
 
       <a class='link' href='examples/webxr'>
         <h2>WebXR Example</h2>
-        <p>A photogrammetry model of an alley loaded with an A-Frame scene in an WebXR environment with teleport controls</p>
+        <p>A photogrammetry model of an alley loaded with an A-Frame scene in a WebXR environment with teleport controls</p>
       </a>
 
       <a class='link' href='examples/stats'>
         <h2>WebXR with Statistics</h2>
-        <p>A photogrammetry model loaded with an A-Frame scene with 3D tiles statistics in an WebXR</p>
+        <p>A photogrammetry model loaded with an A-Frame scene with 3D tiles statistics in WebXR</p>
       </a>
 
       <a class='link' href='examples/raysmith'>
