--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
       <a class='link' href='examples/raysmith'>
         <h2>Artist Studio Interior</h2>
-        <p>A photogrammetry model of Ray Smith’s artist studio loaded with an A-Frame scene in an WebXR environment</p>
+        <p>A photogrammetry model of Ray Smith’s artist studio loaded with an A-Frame scene in a WebXR environment</p>
       </a>
 
     </div>
