--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
       <a class='link' href='examples/stats'>
         <h2>WebXR with Statistics</h2>
-        <p>A photogrammetry model loaded with an A-Frame scene with 3D tiles statistics in WebXR</p>
+        <p>A photogrammetry model loaded with an A-Frame scene with 3D Tile statistics in WebXR</p>
       </a>
 
       <a class='link' href='examples/raysmith'>
