update example texts

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </svg>
     </a>
     <h1>
-      The demos below showcase our <a target="_blank" class="inline-link" href="https://github.com/nytimes/three-loader-3dtiles">3D Tiles loader</a> as an <a target="_blank" class="inline-link" href="https://aframe.io/">A-Frame</a> component:
+      The demos below showcase <a target="_blank" class="inline-link" href="https://aframe.io/">A-Frame</a> scenes using our <a target="_blank" class="inline-link" href="https://github.com/nytimes/aframe-loader-3dtiles-component">3D Tiles loader</a> component:
     </h1>
   </header>
 
@@ -161,22 +161,22 @@
 
       <a class='link active' href='examples/basic'>
         <h2>Basic Example</h2>
-        <p>A photogrammetry model of an alley loaded with an A-Frame scene for a standard web-browser</p>
+        <p>A photogrammetry model of an alley loaded in a web-browser</p>
       </a>
 
       <a class='link' href='examples/webxr'>
         <h2>WebXR Example</h2>
-        <p>A photogrammetry model of an alley loaded with an A-Frame scene in a WebXR environment with teleport controls</p>
+        <p>A photogrammetry model of an alley loaded in a WebXR environment with teleport controls</p>
       </a>
 
       <a class='link' href='examples/stats'>
         <h2>WebXR with Statistics</h2>
-        <p>A photogrammetry model loaded with an A-Frame scene with 3D Tile statistics in WebXR</p>
+        <p>A photogrammetry model with 3D Tile statistics in WebXR</p>
       </a>
 
       <a class='link' href='examples/raysmith'>
         <h2>Artist Studio Interior</h2>
-        <p>A photogrammetry model of Ray Smith’s artist studio loaded with an A-Frame scene in a WebXR environment</p>
+        <p>A photogrammetry model of Ray Smith’s artist studio in a WebXR environment</p>
       </a>
 
     </div>
