--- a/examples/raysmith/index.html
+++ b/examples/raysmith/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>A-Frame 3D Tiles Component - Ray Smith example</title>
-    <meta name="description" content="Basic example for 3D Tiles component showing photogrammetry."></meta>
+    <meta name="description" content="WebXR example for 3D Tiles component showing photogrammetry."></meta>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/utils/WorkerPool.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/loaders/KTX2Loader.js'></script>
