Update font sizes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A-Frame 3D Tiles Component</title>
   <style>
+    html {
+      font-size:16px;
+    }
     body {
       background-color: black;
       font-family: sans-serif;
@@ -84,7 +87,7 @@
       margin: 0;
       padding: 0;
       font-size: 1rem;
-      line-height: 1.5;
+      line-height: 1.4;
       color: white;
       font-weight: 100;
     }
