Use gifs for demos

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     }
 
     img {
-      min-width: 0;
+      min-width: 600px;
       max-width: 90%;
       position: absolute;
     }
@@ -184,10 +184,10 @@
 
     </div>
     <div class='image-wrapper'>
-      <img src='examples/basic.jpg'/>
-      <img src='examples/webxr.jpg' class='hidden' />
-      <img src='examples/stats.jpg' class='hidden' />
-      <img src='examples/raysmith.jpg' class='hidden' />
+      <img src='examples/basic.gif'/>
+      <img src='examples/webxr.gif' class='hidden' />
+      <img src='examples/stats.gif' class='hidden' />
+      <img src='examples/raysmith.gif' class='hidden' />
     </div>
   </main>
 
