--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <title>A-Frame 3D Tiles Component - Basic example</title>
     <meta name="description" content="Basic example for 3D Tiles component showing photogrammetry."></meta>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src='https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/utils/WorkerPool.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/loaders/KTX2Loader.js'></script>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/utils/WorkerPool.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/loaders/KTX2Loader.js'></script>
     <script src="../../dist/aframe-loader-3dtiles-component.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.2.0/dist/aframe-environment-component.min.js"></script>
     <style>
       #guide {
         position: fixed;
@@ -28,7 +27,7 @@
     </style>
   </head>
   <body>
-    <a-scene environment="preset: default" vr-mode-ui="enabled: false">
+    <a-scene vr-mode-ui="enabled: false" renderer="colorManagement: true;">
       <a-camera id="camera"></a-camera>
       <a-entity
         id="tileset"
