--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -31,14 +31,10 @@
       <a-camera id="camera"></a-camera>
       <a-entity
         id="tileset"
-        position="0 2.6 0"
-        rotation="-90 180 0"
+        position="-1.5 10 -28"
+        rotation="-90 0 90"
         scale="2 2 2"
-        loader-3dtiles="
-            url: https://int.nyt.com/data/3dscenes/ONA360/TILESET/0731_FREEMAN_ALLEY_10M_A_36x8K__10K-PN_50P_DB/tileset_tileset.json;
-            maximumSSE: 48;
-            cameraEl: #camera;
-        "
+        loader-3dtiles="url: https://int.nyt.com/data/3dscenes/ONA360/TILESET/0731_FREEMAN_ALLEY_10M_A_36x8K__10K-PN_50P_DB/tileset_tileset.json; maximumSSE: 48; cameraEl: #camera"
       >
       </a-entity>
     </a-scene>
