--- a/examples/stats/index.html
+++ b/examples/stats/index.html
@@ -18,21 +18,21 @@
         <a-entity id="right-hand" oculus-touch-controls="hand: right" blink-controls="collisionEntities: #floor;"></a-entity>
       </a-entity>
       <a-entity
-        id="freeman-tiles"
-        position="-3 2.2 -30"
-        rotation="-90 180 0"
+        id="tileset"
+        position="-1.5 10 -28"
+        rotation="-90 0 90"
         scale="2 2 2"
         loader-3dtiles="url: https://int.nyt.com/data/3dscenes/ONA360/TILESET/0731_FREEMAN_ALLEY_10M_A_36x8K__10K-PN_50P_DB/tileset_tileset.json; maximumSSE: 48; cameraEl: #camera; showStats: true;"
       >
       </a-entity>
       <a-sky color="#a8caff"></a-sky>
       <a-entity
-          id="floor"
-          geometry="primitive:plane;"
-          rotation="-88.66 -1.49 2.650"
-          scale="-38.51 68.674 1"
-          position="-2.017 0.48 -32.356"
-          visible="false"
+        id="floor"
+        geometry="primitive:plane;"
+        rotation="-90 0 0"
+        scale="-38.51 68.674 1"
+        position="-2.017 0.08 -30.12"
+        visible="false"
       ></a-entity>
     </a-scene>
     <script>
