remove clipping test

--- a/examples/webxr/index.html
+++ b/examples/webxr/index.html
@@ -14,7 +14,7 @@
     <a-scene background="color: #ECECEC" renderer="antialias: true; logarithmicDepthBuffer:true; colorManagement: true;">
       <a-entity id="player">
         <a-camera id="camera"></a-camera>
-        <a-entity camera="active:true; near:100" id="camera"></a-entity>
+        <a-entity camera="active:true;" id="camera"></a-entity>
         <a-entity id="left-hand" oculus-touch-controls="hand: left" blink-controls="collisionEntities: #floor;"></a-entity>
         <a-entity id="right-hand" oculus-touch-controls="hand: right" blink-controls="collisionEntities: #floor;"></a-entity>
       </a-entity>
