--- a/examples/raysmith/index.html
+++ b/examples/raysmith/index.html
@@ -11,7 +11,7 @@
     <script src="../../dist/aframe-loader-3dtiles-component.js"></script>
   </head>
   <body>
-    <a-scene background="color: #ECECEC" renderer="antialias: true; logarithmicDepthBuffer:true; colorManagement: true;">
+    <a-scene background="color: #ECECEC" renderer="colorManagement: true;">
       <a-entity id="player">
         <a-camera id="camera"></a-camera>
         <a-entity id="left-hand" oculus-touch-controls="hand: left" blink-controls="collisionEntities: #floor;"></a-entity>
