--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <title>A-Frame 3D Tiles Component - Basic example</title>
     <meta name="description" content="Basic example for 3D Tiles component showing photogrammetry."></meta>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src='https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/utils/WorkerPool.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/loaders/KTX2Loader.js'></script>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/utils/WorkerPool.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/loaders/KTX2Loader.js'></script>
     <script src="../../dist/aframe-loader-3dtiles-component.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.2.0/dist/aframe-environment-component.min.js"></script>
     <style>
       #guide {
         position: fixed;
@@ -28,18 +27,14 @@
     </style>
   </head>
   <body>
-    <a-scene environment="preset: default" vr-mode-ui="enabled: false">
+    <a-scene vr-mode-ui="enabled: false" renderer="colorManagement: true;">
       <a-camera id="camera"></a-camera>
       <a-entity
         id="tileset"
-        position="0 2.6 0"
-        rotation="-90 180 0"
+        position="-1.5 10 -28"
+        rotation="-90 0 90"
         scale="2 2 2"
-        loader-3dtiles="
-            url: https://int.nyt.com/data/3dscenes/ONA360/TILESET/0731_FREEMAN_ALLEY_10M_A_36x8K__10K-PN_50P_DB/tileset_tileset.json;
-            maximumSSE: 48;
-            cameraEl: #camera;
-        "
+        loader-3dtiles="url: https://int.nyt.com/data/3dscenes/ONA360/TILESET/0731_FREEMAN_ALLEY_10M_A_36x8K__10K-PN_50P_DB/tileset_tileset.json; maximumSSE: 48; cameraEl: #camera"
       >
       </a-entity>
     </a-scene>
