--- a/examples/stats/index.html
+++ b/examples/stats/index.html
@@ -4,35 +4,35 @@
     <meta charset="utf-8">
     <title>A-Frame 3D Tiles Component - Stats example</title>
     <meta name="description" content="Stats example for 3D Tiles component showing photogrammetry."></meta>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src='https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/utils/WorkerPool.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/three@0.133.0/examples/js/loaders/KTX2Loader.js'></script>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/utils/WorkerPool.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/loaders/KTX2Loader.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-blink-controls/dist/aframe-blink-controls.min.js"></script>
     <script src="../../dist/aframe-loader-3dtiles-component.js"></script>
   </head>
   <body>
-    <a-scene background="color: #ECECEC">
+    <a-scene background="color: #ECECEC" renderer="colorManagement: true;">
       <a-entity id="player">
         <a-entity id="camera" camera wasd-controls look-controls></a-entity>
         <a-entity id="left-hand" oculus-touch-controls="hand: left" blink-controls="collisionEntities: #floor;"></a-entity>
         <a-entity id="right-hand" oculus-touch-controls="hand: right" blink-controls="collisionEntities: #floor;"></a-entity>
       </a-entity>
       <a-entity
-        id="freeman-tiles"
-        position="-3 2.2 -30"
-        rotation="-90 180 0"
+        id="tileset"
+        position="-1.5 10 -28"
+        rotation="-90 0 90"
         scale="2 2 2"
         loader-3dtiles="url: https://int.nyt.com/data/3dscenes/ONA360/TILESET/0731_FREEMAN_ALLEY_10M_A_36x8K__10K-PN_50P_DB/tileset_tileset.json; maximumSSE: 48; cameraEl: #camera; showStats: true;"
       >
       </a-entity>
       <a-sky color="#a8caff"></a-sky>
       <a-entity
-          id="floor"
-          geometry="primitive:plane;"
-          rotation="-88.66 -1.49 2.650"
-          scale="-38.51 68.674 1"
-          position="-2.017 0.48 -32.356"
-          visible="false"
+        id="floor"
+        geometry="primitive:plane;"
+        rotation="-90 0 0"
+        scale="-38.51 68.674 1"
+        position="-2.017 0.08 -30.12"
+        visible="false"
       ></a-entity>
     </a-scene>
     <script>
