--- a/examples/google-tiles/index.html
+++ b/examples/google-tiles/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Basic example for 3D Tiles component showing google 3d Tiles."></meta>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="../../dist/aframe-loader-3dtiles-component.js"></script>
-        <!-- vr teleport controls -->
-    <script src="https://cdn.jsdelivr.net/npm/aframe-blink-controls@0.4.3/dist/aframe-blink-controls.min.js"></script>
+        <!-- vr teleport controls -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/aframe-blink-controls@0.4.3/dist/aframe-blink-controls.min.js"></script> -->
     <style>
       #guide {
         position: fixed;
@@ -31,14 +31,12 @@
       <a-entity camera="fov:45; near:1; far: 1000" look-controls="reverseMouseDrag: true" wasd-controls="enabled: true" id="camera" cursor-teleport="cameraRig: #camera; cameraHead: #camera;"></a-entity>
       <a-entity
         id="tileset"
-        position="-1.5 10 -28"
-        rotation="-90 0 90"
-        scale="2 2 2"
+        data-no-pause
         loader-3dtiles="
           url: https://tile.googleapis.com/v1/3dtiles/root.json; 
-          lat: 35.6586; 
-          long: 139.7454; 
-          height: 500; 
+          lat: 37.77522354250163;
+          long: -122.41931773049723;
+          height: -16.5;
           googleApiKey: AIzaSyAQshwLVKTpwTfPJxFEkEzOdP_cgmixTCQ;
           geoTransform: WGS84Cartesian;
           maximumSSE: 48; 
