--- a/examples/google-tiles/index.html
+++ b/examples/google-tiles/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Basic example for 3D Tiles component showing google 3d Tiles."></meta>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="../../dist/aframe-loader-3dtiles-component.js"></script>
+    <!-- <script src="https://unpkg.com/3dstreet@0.4.5/dist/aframe-street-component.js"></script> -->
+
         <!-- vr teleport controls -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/aframe-blink-controls@0.4.3/dist/aframe-blink-controls.min.js"></script> -->
     <style>
@@ -37,7 +39,7 @@
           lat: 37.77522354250163;
           long: -122.41931773049723;
           height: -16.5;
-          googleApiKey: AIzaSyAQshwLVKTpwTfPJxFEkEzOdP_cgmixTCQ;
+          googleApiKey: AIzaSyDI557E8HZHoh5ETqIrlmt8d0C4HfyiCG8;
           geoTransform: WGS84Cartesian;
           maximumSSE: 48; 
           maximumMem: 400;
