remove default from google api key

--- a/examples/google-tiles/index.html
+++ b/examples/google-tiles/index.html
@@ -39,7 +39,7 @@
           lat: 37.77522354250163;
           long: -122.41931773049723;
           height: -16.5;
-          googleApiKey: AIzaSyDI557E8HZHoh5ETqIrlmt8d0C4HfyiCG8;
+          googleApiKey: INSERTYOURKEYHERE;
           geoTransform: WGS84Cartesian;
           maximumSSE: 48; 
           maximumMem: 400;
